--- a/html/index.html
+++ b/html/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jussis Tetris</title>
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="/css/styles.css" />
-
 </head>
 
 <body>
@@ -24,12 +22,16 @@
         <p>Score: <span id="score">0</span></p>
         <p>Lines: <span id="lines">0</span></p>
         <p>Level: <span id="level">0</span></p>
+        <canvas id="next" class="next"></canvas>
       </div>
       <button id="play-btn" onclick="play()" class="play-button">Play</button>
       <button id="pause-btn" onclick="pause()" class="play-button">Pause</button>
     </div>
-
-
+  </div>
+  <script src="/js/constants.js"></script>
+  <script src="/js/gameplan.js"></script>
+  <script src="/js/shape.js"></script>
+  <script src="/js/main.js"></script>
 </body>
 
 </html>
